<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distance">Distância</string>
    <string name="totalKM">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="pricePerLiter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kmsLiter">KMs por litro</string>
    <string name="totalSpend">Seu gasto total será de</string>
    <string name="buttonCalculate">Calcular</string>
    <string name="totalValue">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>